# chrome2k

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool
example/: Chrome.tex  Makefile.am  Makefile.in  OilSmudgeTile.tex  PTCmain.cpp  ThemRoots.tex  TubularHaze.tex  arena.nff  bumper.nff  bumper2.nff  bumpergr.nff  chrome.nff  dxmain.cpp  testmain.c  tstworld.c  tstworld.h
lib/: Makefile  Makefile.am  Makefile.in  actor.c  actor.h  actptset.c  actptset.h  colormgr.c  colormgr.h  dirlight.h  edgetbl.c  edgetbl.h  floatset.c  floatset.h  frame.c  frame.h  hplane.c  hplane.h  indexset.c  indexset.h  lmap1.h  lmap256.c  lmap256.h  matrix.h  model.c  model.h  nffmodel.c  nffmodel.h  octree.c  octree.h  parsebuf.c  parsebuf.h  plane.c  plane.h  planeset.c  planeset.h  pmodel.c  pmodel.h  polygon.c  polygon.h  (+16 more)
